# skiros2

skiros2/skiros2/scripts/: install_fd_task_planner.sh
skiros2/skiros2_task/: domain.pddl  p01.pddl
skiros2_moveit_lib/: LICENSE.md
skiros2_moveit_lib/moveit_linear_motion/: CMakeLists.txt  package.xml
skiros2_moveit_lib/moveit_linear_motion/action/: LinearMotion.action
skiros2_moveit_lib/moveit_linear_motion/include/moveit_linear_motion/: ActionServer.h  LinearMotion.h
skiros2_moveit_lib/moveit_linear_motion/launch/: run.launch
skiros2_moveit_lib/moveit_linear_motion/src/: LinearMotion.cpp  LinearMotionServer.cpp
skiros2_moveit_lib/skiros2_moveit_lib/: CMakeLists.txt  package.xml  setup.py
skiros2_moveit_lib/skiros2_moveit_lib/launch/: config.rviz  ur_bringup.launch  ur_example.launch
skiros2_moveit_lib/skiros2_moveit_lib/owl/: test_robot_description.owl  ur_scene.turtle
skiros2_moveit_lib/skiros2_moveit_lib/src/skiros2_moveit_lib/: motion_skills.py  moveit_primitives.py
skiros2_test_lib/: README.md
skiros2_test_lib/launch/: turtlesim_example.launch
skiros2_test_lib/src/skiros2_test_lib/turtlesim_example/: turtlesim_primitives.py  turtlesim_skills.py
