<?xml version="1.0"?>
<package format="2">
  <name>moveit_linear_motion</name>
  <version>1.0.0</version>
  <description>The linear_motion package</description>

  <maintainer email="francesco@mp.aau.dk">Francesco Rovida</maintainer>
  <license>L-GPL</license>
  <author email="francesco@mp.aau.dk">Francesco Rovida</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>


  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>tf</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
