<?xml version="1.0"?>
<package>
  <name>skiros2_moveit_lib</name>
  <version>1.0.0</version>
  <description>Moveit library for skiros2</description>

  <maintainer email="francesco@mp.aau.dk">Francesco Rovida</maintainer>
  <license>L-GPL</license>
  <author email="francesco@mp.aau.dk">Francesco Rovida</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>skiros2_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>skiros2_msgs</run_depend>
  <run_depend>skiros2_common</run_depend>
  <run_depend>skiros2_skill</run_depend>
</package>
